# esp-temp-sensor

./: Cargo.toml  LICENSE  README.md  README_JA.md
.cargo/: config.toml
example/raspberrypi_zero/: README.md  read_ds18b20.py
examples/m5unitcam_get_temperature/: Cargo.toml
examples/m5unitcam_get_temperature/.cargo/: config.toml
examples/m5unitcam_get_temperature/src/: main.rs
examples/xiao_esp32c3_get_temperature/: Cargo.toml
examples/xiao_esp32c3_get_temperature/.cargo/: config.toml
examples/xiao_esp32c3_get_temperature/src/: main.rs
src/: lib.rs  main.rs
src/temp_sensor/: logic.rs  mod.rs  temp_sensor.rs
